compiler/tests/success/t_array_expand.jazz
fn foo () -> reg u64 {
  reg    u64[5] x;
  reg    u64    z;
  inline int _i;
  x[0] = 0;
  x[1] = 0;
  x[2] = 0;
  x[3] = 0;
  x[4] = 0;
  z = x[0];
  return z;
} 