compiler/tests/fail/param_expansion/x86-64/array_size_mismatch2.jazz
param int N = 4;
u64[N] g = {1};
